# trend-getter

./: .gitignore  pyproject.toml
trend_getter/: holidays.py  metric_calculations.py  plotting.py  scenarios.py
trend_getter/holiday/: custom_holidays.py
